# open-young-director

./: .gitignore  CLAUDE.md  README.md  WRITER.md  pyproject.toml  research_awesome_seedance.md  research_novel_writing.md  research_seedance2_storyboard.md  research_seedance2_wwwzhouhui.md  research_seedance_prompt_skill.md
lib/knowledge_base/: .env.example  __init__.py  analyze_content.py  analyze_outline_conflict.py  classical_backbones.json  generate_char_prompt.py  generate_character_images.py  gradio_app.py  kimi_param_scored_results.json  kimi_param_test_results.json  novel_crawl.py  novel_outline.md  pyproject.toml  research_findings.md  run.py  run_media_generation.py  run_novel_generation.py  run_triggered_generation.py  streamlit_app.py  task_plan.md  test_music_generation.py  writing_options.py
lib/knowledge_base/agents/: __init__.py  chapter_manager.py  config_manager.py  derivative_generator.py  feedback_loop.py  novel_generator.py  novel_workflow_orchestrator.py  outline_loader.py  reality_checker.py
lib/knowledge_base/config/: current_project.txt  project_6dfc245d840a.json
lib/knowledge_base/consistency/: __init__.py
lib/knowledge_base/consumers/: __init__.py  base.py  music_consumer.py  novel_consumer.py  orchestrator.py  podcast_consumer.py  scene_store.py  video_consumer.py
lib/knowledge_base/cookies/: fanqie_browser_state.json  fanqie_cookies.json  fanqie_local_storage.json  fanqie_session_storage.json
lib/knowledge_base/crawlers/: __init__.py  base_crawler.py  biquge_crawler.py  chuangshi_crawler.py  chuangshi_qq_crawler.py  (+4 more)
(+863 files in other folders)
