[project]
name = "knowledge_base"
dynamic = ["version"]
description = "Novel knowledge base with multi-agent narrative generation"
authors = [
    { name = "young-writer" }
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "crewai",
    "chromadb>=0.4.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "gradio>=5.0.0",
    "streamlit>=1.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_base"]
